fix css on smaller devices

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -19,7 +19,7 @@
     width: 70%;
     margin: auto;
 }
- @media (max-width: 400px) {
+ @media only screen and (max-width: 700px) {
    .containerTo {
        display: block;
        width: 100%;
